--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,7 +62,7 @@ jobs:
             echo "Starting Nginx..."
             sudo systemctl start nginx
             echo "--- Deployment verification on EC2 UAT ---"
-            ls -l /var/www/html/ # Debugging: Show what's now in the deployed directory
+            ls -l /var/www/html/
             echo "------------------------------------------"
             echo "UAT Deployment Complete!"
 
