added changes in deplo.yml file once again2

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,23 +42,23 @@ jobs:
           echo "--- Files copied to /tmp/app_deploy.tar.gz on EC2 ---"
 
       - name: Deploy and Restart Nginx on UAT-Server
-        uses: appleboy/ssh-action@v1.0.3 # CORRECT: Use the SSH action directly
+        uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.UAT_EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: | # CORRECT: Provide the script directly to the action
+          script: |
             echo "--- Connecting to EC2 to deploy and restart Nginx ---"
             echo "Stopping Nginx..."
             sudo systemctl stop nginx
             echo "Clearing previous deployment at /var/www/html..."
-            sudo rm -rf /var/www/html/* # TARGET /var/www/html
+            sudo rm -rf /var/www/html/*
             echo "Extracting tarball to /var/www/html..."
-            sudo tar -xzf /tmp/app_deploy.tar.gz -C /var/www/html/ # TARGET /var/www/html
+            sudo tar -xzf /tmp/app_deploy.tar.gz -C /var/www/html/
             echo "Removing tarball from /tmp/..."
             sudo rm /tmp/app_deploy.tar.gz
             echo "Setting final permissions for Nginx read access..."
-            sudo chmod -R 755 /var/www/html # Ensure Nginx (www-data) can read
+            sudo chmod -R 755 /var/www/html
             echo "Starting Nginx..."
             sudo systemctl start nginx
             echo "--- Deployment verification on EC2 UAT ---"
